--- a/FlaskApp/templates/index.html
+++ b/FlaskApp/templates/index.html
@@ -13,9 +13,9 @@
     <div id="map"></div>
     <script>
       function initMap() {
-        var uluru = {lat: -25.363, lng: 131.044};
+        var uluru = {lat: {{context[0]}}, lng: {{context[1]}}};
         var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 4,
+          zoom: 2,
           center: uluru
         });
         var marker = new google.maps.Marker({
